# ruffus

./: .gitignore  CHANGELOG.md  Cargo.toml  PUBLISH_v0.1.2.md  README.md
.kiro/specs/rust-web-cli-generator/: design.md  requirements.md  tasks.md
.kiro/specs/rust-web-framework/: design.md  requirements.md  tasks.md
examples/: basic.rs  extractors.rs  full_api.rs  json_api.rs  middleware.rs  router.rs
src/: app.rs  error.rs  extractors.rs  lib.rs  main.rs  method.rs  middleware.rs  request.rs  response.rs  router.rs
src/cli/: mod.rs
src/config/: mod.rs
src/detector/: mod.rs
src/filesystem/: mod.rs
src/generators/: guard.rs  mod.rs  module.rs  route.rs  service.rs
src/templates/: builtin.rs  engine.rs  mod.rs  provider.rs
tests/: property_tests.rs
tests/property/: .gitkeep  app_properties.rs  error_properties.rs  extractor_properties.rs  middleware_properties.rs  request_properties.rs  response_properties.rs  router_properties.rs
tests/unit/: .gitkeep
