[package]
name = "ruffus"
version = "0.1.0"
edition = "2021"
description = "Rust Web CLI Generator - A tool for generating web components in Rust projects"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/ruffus"
keywords = ["cli", "generator", "web", "rust", "template"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ruffus"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
handlebars = "4.5"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"