[package]
name = "ruffus"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
hyper = { version = "1.0", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
bytes = "1.5"
http = "1.0"
http-body-util = "0.1"
urlencoding = "2.1"
chrono = "0.4"

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"
