[package]
name = "ruffus"
version = "0.1.2"
edition = "2021"
authors = ["Martin Hernandez <holasoymalva@gmail.com>"]
description = "Fast, minimalist web framework for Rust inspired by Express.js"
documentation = "https://docs.rs/ruffus"
homepage = "https://github.com/holasoymalva/ruffus"
repository = "https://github.com/holasoymalva/ruffus"
readme = "README.md"
license = "MIT"
keywords = ["web", "framework", "http", "server", "async"]
categories = ["web-programming::http-server", "asynchronous"]
exclude = [
    ".github/*",
    "tests/*",
    ".kiro/*",
]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
hyper = { version = "1.0", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
bytes = "1.5"
http = "1.0"
http-body-util = "0.1"
urlencoding = "2.1"
chrono = "0.4"

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"
